Fix all changes for authentication

--- a/src/app/config.ini
+++ b/src/app/config.ini
@@ -1,7 +1,7 @@
 # config.ini
 [database]
-dbname =  backend-database
+dbname =  fingpt-dev
 user = postgres
-password = a55zWlt:CYtAi|FB(|jJSpRA90N}
-host = independent-way-410316:us-central1:collaborativedocsdb-test
+password = +L7H>ZP_SGzhXG@U
+host = reliable-vector-429905-e8:us-central1:backend-database
 port = 5432
