Add updated changes for new database for dubai customer database

--- a/src/app/config.ini
+++ b/src/app/config.ini
@@ -1,6 +1,6 @@
 # config.ini
 [database]
-dbname =  fingpt-dev
+dbname = dubai-customer-dev
 user = postgres
 password = +L7H>ZP_SGzhXG@U
 host = reliable-vector-429905-e8:us-central1:backend-database
